--- a/src/styles.css
+++ b/src/styles.css
@@ -13,3 +13,5 @@
     --bs-btn-bg: var(--bs-indigo) !important;
     --bs-btn-border-color: var(--bs-indigo) !important;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
