EFSL - 4 de julio

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,48 +1,2 @@
 <app-menu></app-menu>
-
-<div class="py-5 bg-primary">
-	<div class="container text-white">
-		<div class="row">
-			<div class="col-md-6">
-				<ul class="list-group">
-					<li class="list-group-item d-flex justify-content-between">
-						<span>
-							<i class="bi bi-calendar me-2"></i>
-							Fecha de Nacimiento
-						</span>
-						<span class="fw-bold">{{ student.birthdate | date }}</span>
-					</li>
-					<li class="list-group-item d-flex justify-content-between">
-						<span>
-							<i class="bi bi-currency-dollar me-2"></i>
-							Cuota
-						</span>
-						<span class="fw-bold">{{ student.payment | currency }}</span>
-					</li>
-				</ul>	
-			</div>
-			<div class="col-md-6">
-			</div>
-		</div>
-	</div>
-</div>
-
-<section class="py-5">
-	<div class="container">
-		<div class="row justify-content-center">
-			<div class="col-md-6">
-				<app-school></app-school>
-			</div>
-		</div>
-	</div>
-</section>
-
-<app-student></app-student>
-
-<hr>
-
-<app-iric></app-iric>
-
-<app-plus></app-plus>
-
-<app-operasbas></app-operasbas>
+<router-outlet />
