--- a/src/app/school/forms/operasbas/operasbas.component.html
+++ b/src/app/school/forms/operasbas/operasbas.component.html
@@ -1,10 +1,3 @@
-<form class="example-form">
-    <mat-form-field class="example-full-width">
-        <mat-label>First</mat-label>
-        <input matInput [(ngModel)]="first">
-    </mat-form-field>
-    <mat-form-field class="example-full-width">
-        <mat-label>Second</mat-label>
-        <input matInput [(ngModel)]="second">
-    </mat-form-field>
-</form>
+<div>
+    <h1>Hello World</h1>
+</div>
