--- a/src/app/school/menu/menu.component.html
+++ b/src/app/school/menu/menu.component.html
@@ -31,18 +31,18 @@
             <div class="offcanvas-body">
                 <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#"
+                        <a class="nav-link active" aria-current="page" href="/"
                             >Home</a
                         >
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Form</a>
+                        <a class="nav-link" routerLink="school">School</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Rutas</a>
+                        <a class="nav-link" routerLink="operations">Operations</a>
                     </li>
                     <li class="nav-item">
-                        <a class="btn btn-primary" href="#">Rutas</a>
+                        <a class="btn btn-primary" routerLink="reactive-student">Student</a>
                     </li>
                 </ul>
             </div>
